# rapidctl

./: .gitignore  CHANGELOG.md  README.md  examplectl  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
rapidctl/bootstrap/: client.py  state.py
rapidctl/bootstrap/connectors/: __init__.py  base.py  linux.py  osx.py
rapidctl/cli/: __init__.py  actions.py  main.py  mcp.py  tasks.py
rapidctl/errors/: __init__.py
rapidctl/utils/: version.py
tests/: conftest.py  example_connector_usage.py  test_auth_handling.py  test_auto_detection.py  test_base_connector.py  test_client.py  test_client_connect.py  test_conatiner_validator.py  test_container_validator.py  test_image_caching.py  test_linux_connector.py  test_main_flow.py  test_mcp.py  test_osx_connector.py  test_state_manager.py  test_version_management.py
