[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rapidctl"
dynamic = ["version"]
description = "A Python framework for creating custom CLI tools using Podman"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "podman",
    "mcp[cli]",
]

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "https://github.com/dalethestirling/rapidctl"
